<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/layout_full_horizontal">

    <View
        style="@style/style_record_horizontal_separator"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp">

        <TextView
            style="@style/layout_horizontal_text_view"
            android:textColor="@color/background"
            android:gravity="start"
            android:layout_weight="4"
            android:text="@string/description_label"
            android:id="@+id/record_description_text_view"
            android:textSize="17sp"/>
        <TextView
            style="@style/layout_horizontal_text_view"
            android:textColor="@color/background"
            android:layout_weight="3"
            android:gravity="end"
            android:text="@string/record_amount_placeholder"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:id="@+id/record_amount_text_view"
            android:textSize="17sp"/>
        <TextView
            style="@style/layout_horizontal_text_view"
            android:textColor="@color/background"
            android:layout_weight="4"
            android:gravity="end"
            android:text="@string/record_category_placeholder"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:id="@+id/record_category_text_view"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            style="@style/layout_horizontal_text_view"
            android:textColor="@color/background"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/record_name_placeholder"
            android:id="@+id/record_name_text_view"
            android:gravity="start"
            android:textSize="12sp"/>
        <TextView
            style="@style/layout_horizontal_text_view"
            android:textColor="@color/background"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/record_date_placeholder"
            android:id="@+id/record_date_text_view"
            android:gravity="start"
            android:textSize="12sp"
            />


    </LinearLayout>

</LinearLayout>